// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageDetailHeader/> default props 1`] = `
<div
  className="page-header"
>
  <div
    className="col-xs-12 col-md-6 detail__header--container"
  >
    <div
      className="detail__header--image-container"
    >
      <img
        alt="default-icon"
        className="detail__header-icon"
        height="100%"
        src="/labkey/_images/default.svg"
        width="100%"
      />
    </div>
    <div
      className="detail__header-icon--body-container"
    >
      <h2
        className="no-margin-top detail__header--name"
      >
        Title
      </h2>
    </div>
  </div>
  <div
    className="clearfix"
  />
</div>
`;

exports[`<PageDetailHeader/> with additional props 1`] = `
<div
  className="page-header"
>
  <div
    className="col-xs-12 col-md-5 detail__header--container"
  >
    <div
      className="detail__header--image-container"
    >
      <img
        alt="iconSrc-icon"
        className="detail__header-icon"
        height="100%"
        src="/labkey/iconDir/iconsrc.svg"
        width="100%"
      />
    </div>
    <div
      className="detail__header-icon--body-container"
    >
      <h2
        className="no-margin-top detail__header--name"
      >
        Title
      </h2>
      <h4
        className="test-loc-detail-subtitle"
      >
        Subtitle
      </h4>
      <span
        className="detail__header--desc"
      >
        Description
      </span>
    </div>
  </div>
  <div
    className="pull-right"
  >
    <div>
      Something off to the right
    </div>
  </div>
  <div
    className="clearfix"
  />
</div>
`;

exports[`<PageDetailHeader/> without icon 1`] = `
<div
  className="page-header"
>
  <div
    className="col-xs-12 col-md-6 detail__header--container"
  >
    <div
      className=""
    >
      <h2
        className="no-margin-top detail__header--name"
      >
        Title
      </h2>
    </div>
  </div>
  <div
    className="clearfix"
  />
</div>
`;
